@@ -69,6 +69,9 @@ extern "C" {
 #define MOUSE_MOVED 0x1
 #define DOUBLE_CLICK 0x2
 #define MOUSE_WHEELED 0x4
+#if (_WIN32_WINNT >= 0x0600)
+#define MOUSE_HWHEELED 0x8
+#endif
 
   typedef struct _WINDOW_BUFFER_SIZE_RECORD {
     COORD dwSize;
@@ -283,7 +286,6 @@ extern "C" {
   WINBASEAPI DWORD WINAPI GetConsoleAliasExesA(LPSTR ExeNameBuffer,DWORD ExeNameBufferLength);
   WINBASEAPI DWORD WINAPI GetConsoleAliasExesW(LPWSTR ExeNameBuffer,DWORD ExeNameBufferLength);
 
-#if (_WIN32_WINNT >= 0x0600)
 #ifndef LF_FACESIZE
 #define LF_FACESIZE 32
 #endif
@@ -327,6 +329,7 @@ WINBOOL WINAPI GetConsoleHistoryInfo(
   PCONSOLE_HISTORY_INFO lpConsoleHistoryInfo
 );
 
+#if (_WIN32_WINNT >= 0x0600)
 #define GetConsoleOriginalTitle __MINGW_NAME_AW(GetConsoleOriginalTitle)
 
 WINBASEAPI DWORD WINAPI GetConsoleOriginalTitleA(
@@ -338,6 +341,7 @@ WINBASEAPI DWORD WINAPI GetConsoleOriginalTitleW(
   LPWSTR lpConsoleTitle,
   DWORD nSize
 );
+#endif /* (_WIN32_WINNT >= 0x0600) */
 
 WINBASEAPI WINBOOL WINAPI GetConsoleScreenBufferInfoEx(
   HANDLE hConsoleOutput,
@@ -364,8 +368,6 @@ WINBASEAPI WINBOOL WINAPI SetCurrentConsoleFontEx(
   WINBOOL bMaximumWindow,
   PCONSOLE_FONT_INFOEX lpConsoleCurrentFontEx
 );
-
-#endif /* (_WIN32_WINNT >= 0x0600) */
 
 #ifdef __cplusplus
 }
