@@ -1,3 +1,8 @@
+2011-11-19  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* wincon.h: Added MOUSE_HWHEELED (0x8).  Moved the Vista version guard
+	to cover only GetConsoleOriginalTitle[A|W].
+
 2011-11-17  Ozkan Sezer  <sezeroz@gmail.com>
 
 	Add gdiplus from mingw.org sources: Original work was by Markus Koenig
